...
      return [];
    }

    return [
      if (synchronized)
        IconButton(
          key: Key('action-sync-account'),
          tooltip: FlouzeLocalizations.of(context).accountPageSynchronizeButtonTooltip,
          icon: (state is AccountSyncSynchronizingState) ? SyncIndicator() : Icon(Icons.sync),
          onPressed: (state is AccountSyncLoadedState) ?
              () { _accountSyncBloc.synchronize(account); } : null
        ),
      IconButton(
          key: Key('action-share-account'),
        tooltip: FlouzeLocalizations.of(context).accountPageShareButtonTooltip,
          icon: Icon(Icons.share),
          onPressed: (state is AccountSyncLoadedState) ? () { _accountSyncBloc.share(account, _shareMessage); } : null,
      ),
      PopupMenuButton(
        key: Key('action-others'),
        onSelected: (PopupMenuAction action) {
          switch (action) {
            case PopupMenuAction.delete_account:
              _deleteAccount();
              break;
          }
        },
          itemBuilder: (BuildContext context) => <PopupMenuEntry<PopupMenuAction>>[
            PopupMenuItem<PopupMenuAction>(
              key: Key('action-delete-account'),
              value: PopupMenuAction.delete_account,
              child: Text(FlouzeLocalizations.of(context).accountPageDeleteActionLabel),
            )
          ]
      )
    ];
...
