...
    'All transactions will be lost. This action cannot be undone.',
    name: 'accountPageDeleteDialogBody',
    desc: 'Body of the "Delete account" confirmation dialog',
  );

  String get accountPageDeleteDialogDeleteButton => Intl.message(
    'Delete the account',
    name: 'accountPageDeleteDialogDeleteButton',
    desc: 'Delete button label in "Delete account" confirmation dialog',
  );

  String get accountPageAddTransactionButtonTooltip => Intl.message(
    'Add a new transaction',
    name: 'accountPageAddTransactionButtonTooltip',
    desc: 'Tooltip of the "Add transaction" button',
  );

  String get accountPageSynchronizeButtonTooltip => Intl.message(
    'Synchronize account',
...
      desc: 'Error prefix when the import failed',
  );

  // AccountListPage

  String get accountListPageAddAccountButtonTooltip => Intl.message(
    'Add a new account',
    name: 'accountListPageAddAccountButtonTooltip',
    desc: 'Tooltip of the "Add account" button',
  );

  String get accountListPageEmptyStateText => Intl.message(
    'Get started by creating a new account',
...
    name: 'addTransactionPageDeleteDialogTitle',
    desc: 'Title of the "Delete transaction" confirmation dialog',
  );


  String get addTransactionPageDeleteDialogDeleteButton => Intl.message(
    'Delete',
    name: 'addTransactionPageDeleteDialogDeleteButton',
    desc: 'Delete button label in "Delete transaction" confirmation dialog',
  );

  String get addTransactionPageSaveButtonTooltip => Intl.message(
    'Save the transaction',
...
